added database config"

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ APP_SECRET=41ff6cf1c732d324fe7b3948f694fb35
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://ips2019:ips2019@mysql/ips2019
 ###< doctrine/doctrine-bundle ###
