--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3.7'
 
 services:
   php-fpm:
-    image: php:fpm-alpine
+    build:
+       context: ./docker/php-fpm
     volumes:
       - ./:/var/www/html:cached
 
@@ -14,18 +15,25 @@ services:
     ports:
       - "80:80"
 
-  mysql:
-    container_name: mysql
-    image: mysql:latest
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: ips2019
-      MYSQL_USER: ips2019
-      MYSQL_PASSWORD: ips2019
-    ports:
-      - "3306:3306"
+  mariadb:
+      container_name: mariadb
+      image: mariadb:latest
+      restart: always
+      environment:
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_DATABASE: ips2019
+        MYSQL_USER: ips2019
+        MYSQL_PASSWORD: ips2019
+      ports:
+        - "3305:3306"
+
+  clickhouse:
+      container_name: clickhouse
+      image: yandex/clickhouse-server
+      ports:
+        - "8123:8123"
+        - "9000:9000"
 
 volumes:
-  mysql:
+  mariadb:
+  clickhouse:
