--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,14 +1,28 @@
 doctrine:
     dbal:
-        # configure these for your database server
-        driver: 'pdo_mysql'
-        server_version: 'mariadb-10.4.8'
-        charset: utf8mb4
-        default_table_options:
-            charset: utf8mb4
-            collate: utf8mb4_unicode_ci
+        default_connection: mariadb
+        connections:
+            mariadb:
+                # configure these for your database server
+                driver: 'pdo_mysql'
+                server_version: 'mariadb-10.4.8'
+                charset: utf8mb4
+                default_table_options:
+                    charset: utf8mb4
+                    collate: utf8mb4_unicode_ci
 
-        url: '%env(resolve:DATABASE_URL)%'
+                url: '%env(resolve:DATABASE_URL)%'
+            clickhouse:
+                host:     localhost
+                port:     8123
+                user:     default
+                password: ""
+                dbname:   default
+                driver_class: FOD\DBALClickHouse\Driver
+                wrapper_class: FOD\DBALClickHouse\Connection
+                options:
+                    enable_http_compression: 1
+                    max_execution_time: 60
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
