--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,24 +1,29 @@
 server {
-    index index.php;
-    server_name mysql-clickhouse-bridge;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    server_name localhost;
     root /var/www/html/public;
+    index index.php;
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+    include /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    error_log /var/log/nginx/mariadb-clickhouse-bridge.error.log warn;
+    access_log /var/log/nginx/mariadb-clickhouse-bridge.access.log;
+
+    location / {
+        rewrite ^ /index.php last;
     }
 
-    location ~* \.(?:css|js)$ {
-        try_files $uri =404;
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
+    location ~* \.(php)$ {
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        fastcgi_pass php-fpm:9000;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $document_root;
+    }
+
+    location ~* \.(?:css|jpe?g|gif|png|ico)$ {}
+
+    location ~* \.(?:js)$ {
+        add_header Content-Type text/javascript;
     }
 }
