--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -6,4 +6,6 @@ RUN apt-get update && \
     docker-php-ext-enable xdebug  && \
     echo 'xdebug.remote_port=10000' >> /usr/local/etc/php/php.ini
 
+RUN composer install
+
 USER docker
