--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,8 @@ version: '3.7'
 services:
   php-fpm:
     build:
-       context: ./docker/php-fpm
+       dockerfile: ./docker/php-fpm/Dockerfile
+       context: ./
     volumes:
       - ./:/var/www/html:cached
 
@@ -13,7 +14,7 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./:/var/www/html
     ports:
-      - "80:80"
+      - "8080:80"
 
   mariadb:
       container_name: mariadb
@@ -21,7 +22,7 @@ services:
         context: ./docker/mariadb
       restart: always
       environment:
-        MYSQL_ROOT_PASSWORD: root
+        MYSQL_ROOT_PASSWORD: test123
         MYSQL_DATABASE: ips2019
         MYSQL_USER: ips2019
         MYSQL_PASSWORD: ips2019
