--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,7 +19,7 @@ doctrine:
                 port:     8123
                 user:     default
                 password: ""
-                dbname:   default
+                dbname:   'test'
                 driver_class: FOD\DBALClickHouse\Driver
                 wrapper_class: FOD\DBALClickHouse\Connection
                 options:
