--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,7 +23,7 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    doctrine:
-        class: Doctrine\DBAL\Connection
-        factory_class:  'App\Repository\'
-        factory_method: 'fetchAll'
+#    doctrine:
+#        class: Doctrine\DBAL\Connection
+#        factory_class:  'App\Repository\'
+#        factory_method: 'fetchAll'
